December-2013 - 0.9.0.3RC1
- Bugfix: ADIF was not properly imported when Fields where using the Type of data optional field preventing logs from Logger32 being imported. (TNX EB1TR)

November-2014 - 0.9.0.2
- Bugfix: Right-click on search result sometimes caused KLog to crash.

November-2014 - 0.9.0.1
- Bugfix: Selected DX-Cluster servers were not used to connect. (TNX DL6FBS)

November-2014 - 0.9.0
- Ensures the ASCII requirement of ADIF.
- Updated the Preferences dialog.
- Added the About Qt help menu.
- Bugfix: Selected DX-Cluster servers were not used to connect.
- Bugfix: When selecting QSL received/sent with right click, date was not updated.
- Bugfix: Fixed the FileManager::adifReadLog to be able to read logs with several lines per QSO.
- Some other minor bugfixes.
- New feature: It is possible to show Imperial System (Miles instead of Km) data. (TNX - KF5JNU)
- New feature: It is possible to mark/look for & export requested QSL.
- New feature: It is possible to automatically mark(or not) a QSL as requested by the DX when the DX's card is received.
- New feature: It is possible to show (or not) the callsign used in the search box.
- New feature: KLog uses bigcty.csv for normal DX & will use cty.csv for contesting.

April-2014 - 0.7.1
- Backport to Qt 4.8.
- Download the http://www.country-files.com/cty/cty.csv instead of cty.dat (with no ARRL id).
- Capable to read cty.csv to get the info of the ARRL id.

April-2014 - 0.7.0
- Full rewritten software based only in Qt. NO KDE dependency.
- KLog can now run on Linux, OSX and Windows.

November-2013 - 0.6.2
- Bug fixed: Under some conditions, KLog crashes when entering a new QRZ. (TNX LW1EQI).
- Bug fixed: IOTA data was not properly cleared when clicking the Cancel button.
- Bug fixed: QSL combobox content was not properly managed. (TNX DF4FH).
- Bug (gui) fixed: IOTA continent is now "automagically" detected... again (a bug prevented this functionality).